# libsodium

./: .gitignore  Cargo.toml  build.rs
.cargo/: config
src/: lib.rs
