[package]
name = "libsodium"
version = "0.1.0"
authors = ["ryan kurte <ryan@kurte.nz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cty = "0.2.0"


[build-dependencies]
glob = "0.3.0"
cc = "1.0.0"
bindgen = "0.51.0"
